# autoevaluator

./: LICENSE  README.md  pyproject.toml  requirements.txt
autoevaluator/: LLM.py  __init__.py  client.py  eval.py  eval_v2.py  evals.py  simplify.py
tests/: test_eval.py  test_eval_v2.py  test_init.py  test_simplify.py
