[tool.poetry]
name = "autoevaluator"
version = "1.1.0"
description = "Fully automated LLM evaluator"
authors = ["Darveen Vijayan <+darveenvijayan.27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.51.0"
instructor = "^1.5.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.23.0"
typing-extensions = "^4.12.2"
asyncio = "^4.0.0"
dotenv = "^0.9.9"
aioboto3 = "^15.5.0"
anthropic = "^0.76.0"
google-genai = "^1.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
